
FTPPublisher:
----------------------
* Made setDeleteArtifacts take a boolean argument, instead of parsing a String as a boolean, for consistency with other plugins (CC-158).
  This means that you MUST use "true" or "false" now in your config file for deleteArtifacts-attribute, and not "yes" or "no"!

HTMLEmailPublisher:
----------------------
* Now tries to determine the locations for xslDir and css automatically when they're not specified
* HTMLEmailPublisher fails to transform xml (CC-112)

index.jsp:
----------------------
* Use rounded corners on the right of the page (CC-113). Patch by Mark Doliner
* Add summary line with percentage of passing/failing projects (CC-203). Patch by Tim Shadel

JMX:
----------------------
* Add ability to require username/password for JMX interface (CC-128). Patch by Glenn Brown
* Upgraded to MX4J 3.0.1

JMX Support:
----------------------
* Expose Project's BuildStartTime as JMX attribute (CC-92). Patch by Jerome Lacoste

Macker:
----------------------
* Add support for Macker in HTMLEmailPublisher and reporting/JSP app. Patch by Andrew Sadler

MavenBuilder:
----------------------
* Require goal attribute. Fixes problem where builder would silently do nothing without one. Patch by Jerome Lacoste

MavenSnapshotDependency:
----------------------
* fix NPE when dependency lacks version tag. Patch by Josh W. Arnold
* MavenSnapshotDependency NPE when no deps listed (CC-248). Patch by Tim Shadel

MKS:
----------------------
* Overhaul of MKS source control. Submitted by Dominik Hirt

navigation.jsp:
----------------------
* Hide navigation drop down when it is empty CC-96. Based on patch by Jerome Lacoste

OnFailurePublisher & OnSuccessPublisher:
----------------------
* Add new publisher that simply wraps other publishers and invokes them only if the build was successful.
* OnFailure version added (& common ConditionalPublisher extracted) by Robert Smith

OSEnvironment
----------------------