@@ -84,6 +84,10 @@ FTPPublisher:
 * Made setDeleteArtifacts take a boolean argument, instead of parsing a String as a boolean, for consistency with other plugins (CC-158).
   This means that you MUST use "true" or "false" now in your config file for deleteArtifacts-attribute, and not "yes" or "no"!
 
+FileServlet:
+----------------------
+* Automatically return welcome files (index.html, etc) when browsing directory (CC-221). Patch by Jerome Lacoste and Jelmer Kuperus
+
 HTMLEmailPublisher:
 ----------------------
 * Now tries to determine the locations for xslDir and css automatically when they're not specified
